# type_checker

./: .pre-commit-config.yaml  Makefile  main.py  pyproject.toml
.github/workflows/: main.yml
basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  tuple.py  union.py  variable.py
