[tool.poetry]
name = "type-checker"
version = "0.1.0"
description = "Type Checker Project"
authors = ["Nikita"]
readme = "README.md"
packages = [{ include = "basic" }, { include = "intermediate" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.16.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["intermediate/generic.py"]
disable_error_code = ["name-defined"]
ignore_missing_imports = true

